Fixing Z-Index issue with EDTRM-652 where the right click menu in the document tree is hidden behind the header.

--- a/acm-standard-applications/acm-law-enforcement/src/main/webapp/resources/assets/css/application.css
+++ b/acm-standard-applications/acm-law-enforcement/src/main/webapp/resources/assets/css/application.css
@@ -358,6 +358,10 @@ span.fancytree-title {
     z-index: 999;
 }
 
+.ui-contextmenu {
+	z-index: 3001;
+}
+
 .module-header .btn-group {
     margin-right: 15px;
 }
